# CppRobotics

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
Control/: CMakeLists.txt  PathFinderController.hpp  move_to_pose.cpp  move_to_pose_robot.cpp
Control/include/: PathFinderController.hpp
Control/move_to_pose/: move_to_pose.cpp  move_to_pose_robot.cpp
Control/src/: move_to_pose.cpp  move_to_pose_robot.cpp
PathPlanning/: CMakeLists.txt
PathPlanning/CurvesGenerator/: bezier_path.cpp  bspline_path.cpp  cubic_spline.cpp  cubic_spline.hpp  cubic_spline_path.cpp  cubic_spline_planner.cpp  dubins_path.cpp  frenet_optimal_trajectory.cpp  quintic_polynomial.hpp  reeds_shepp_path.cpp  reeds_shepp_path.hpp  reeds_shepp_planner.cpp
PathPlanning/GlobalPlanner/: GraphSearchPlanner.cpp  GraphSearchPlanner.hpp  astar.cpp  astar_bidirectional.cpp  breadth_first_search.cpp  depth_first_search.cpp  dijkstra.cpp  dstar_lite.cpp  probabilistic_road_map.cpp  rrt.cpp
PathPlanning/GlobalPlanner/HybridAstar/: dynamic_programming_heuristic.cpp  dynamic_programming_heuristic.hpp  hybrid_astar.cpp  hybrid_astar_with_trailer.cpp
PathPlanning/GraphBased/: GraphSearchPlanner.hpp  astar.cpp  breadth_first_search.cpp  depth_first_search.cpp  dijkstra.cpp
PathPlanning/LocalPlanner/: dynamic_window_approach.cpp  potential_field_planning.cpp
PathPlanning/include/: GraphSearchPlanner.hpp  cruise_line.hpp  cubic_spline.hpp  dynamic_programming_heuristic.hpp  quartic_polynomial.hpp  quintic_polynomial.hpp  reeds_shepp_path.hpp  road_line.hpp
PathPlanning/src/CurvesGenerator/: bezier_path.cpp  bspline_path.cpp  cubic_spline.cpp  cubic_spline_path.cpp  dubins_path.cpp  frenet_optimal_trajectory.cpp  reeds_shepp_path.cpp  reeds_shepp_planner.cpp
PathPlanning/src/GlobalPlanner/: GraphSearchPlanner.cpp  astar.cpp  astar_bidirectional.cpp  breadth_first_search.cpp  depth_first_search.cpp  dijkstra.cpp  probabilistic_road_map.cpp  rrt.cpp
PathPlanning/src/GlobalPlanner/HybridAstar/: dynamic_programming_heuristic.cpp  hybrid_astar.cpp  hybrid_astar_with_trailer.cpp
PathPlanning/src/LocalPlanner/: dynamic_window_approach.cpp  lattice_planner.cpp  potential_field_planning.cpp
PathTracking/: CMakeLists.txt  lqr_with_cartesian.cpp  lqr_with_frenet.cpp  lqr_with_xy.cpp  pure_pursuit.cpp  stanley_controller.cpp
PathTracking/include/: model_predictive_control.hpp
PathTracking/src/: lqr_with_cartesian.cpp  lqr_with_frenet.cpp  model_predictive_control.cpp  mpc_with_osqp.cpp  pure_pursuit.cpp  stanley_controller.cpp
Perception/: CMakeLists.txt  extend_kalman_filter_location.cpp  rectangle_fitting.cpp  simulator.hpp
Perception/include/: simulator.hpp
Perception/src/: extend_kalman_filter_location.cpp  rectangle_fitting.cpp
assets/: install-tips.md
move_to_pose/: move_to_pose.cpp  move_to_pose_robot.cpp
utils/: CMakeLists.txt  KDTree.hpp  matplotlibcpp.h  utils.cpp  utils.hpp
utils/include/: CPPLINT.cfg  matplotlibcpp.h  utils.hpp
utils/src/: KDTree.cpp  ipopt_solve_test.cpp  osqp_solve_test.cpp  utils.cpp
